--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@
             <b class="promo-slider-text-header">Порхает как бабочка, жалит как пчела!</b>
             <p class="promo-slider-text-main">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную
               камеру.</p>
-            <a class="btn" href="#">Подробнее</a>
+            <a class="promo-slider-button" href="#">Подробнее</a>
             <table class="specifications">
               <tr>
-                <th>800 м</th>
-                <th>50 м</th>
+                <th class="specifications-up">800 м</th>
+                <th class="specifications-up">50 м</th>
               </tr>
               <tr>
-                <td>Дальность полета</td>
-                <td>Радиус поражения</td>
+                <td class="specifications-down">Дальность полета</td>
+                <td class="specifications-down">Радиус поражения</td>
               </tr>
             </table>
           </div>
@@ -101,13 +101,13 @@
           <div class="promo-slider-info">
             <b class="promo-slider-text-header">Худеем правильно!</b>
             <p class="promo-slider-text-main">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
-            <a class="btn" href="#">Подробнее</a>
+            <a class="promo-slider-button" href="#">Подробнее</a>
             <table class="specifications">
               <tr>
-                <th>48 часов</th>
+                <th class="specifications-up">48 часов</th>
               </tr>
               <tr>
-                <td>Без подзарядки</td>
+                <td class="specifications-down">Без подзарядки</td>
               </tr>
             </table>
           </div>
@@ -118,17 +118,17 @@
             <b class="promo-slider-text-header">Делай селфи,как Бен Стиллер!</b>
             <p class="promo-slider-text-main">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом
               всего 5 килограмм.</p>
-            <a class="btn" href="#">Подробнее</a>
+            <a class="promo-slider-button" href="#">Подробнее</a>
             <table class="specifications">
               <tr>
-                <th>8,5 м</th>
-                <th>5 кг</th>
-                <th>Карбон</th>
+                <th class="specifications-up">8,5 м</th>
+                <th class="specifications-up">5 кг</th>
+                <th class="specifications-up">Карбон</th>
               </tr>
               <tr>
-                <td>Длина палки</td>
-                <td>Вес палки</td>
-                <td>Материал</td>
+                <td class="specifications-down">Длина палки</td>
+                <td class="specifications-down">Вес палки</td>
+                <td class="specifications-down">Материал</td>
               </tr>
             </table>
           </div>
@@ -138,22 +138,22 @@
         <h2 class="visually-hidden">Категории товаров</h2>
         <ul class="main-goods-list">
           <li class="main-goods-item">
-            <a href="#">Виртуальная реальность</a>
+            <a class="main-goods-link" href="#">Виртуальная реальность</a>
           </li>
           <li class="main-goods-item">
-            <a href="#">Моноподы для селфи</a>
+            <a class="main-goods-link" href="#">Моноподы для селфи</a>
           </li>
           <li class="main-goods-item">
-            <a href="#">Экшн-камеры</a>
+            <a class="main-goods-link" href="#">Экшн-камеры</a>
           </li>
           <li class="main-goods-item">
-            <a href="#">Фитнес-браслеты</a>
+            <a class="main-goods-link" href="#">Фитнес-браслеты</a>
           </li>
           <li class="main-goods-item">
-            <a href="#">Умные часы</a>
+            <a class="main-goods-link" href="#">Умные часы</a>
           </li>
           <li class="main-goods-item">
-            <a href="#">Квадрокоптеры</a>
+            <a class="main-goods-link" href="#">Квадрокоптеры</a>
           </li>
         </ul>
       </section>
@@ -162,8 +162,7 @@
         <div class="service-sleder-controls">
           <input class="services-slider-input  visually-hidden" id="services-control-1" type="radio"
             name="services-control" checked>
-          <label class="services-slider-control  services-slider-control-active"
-            for="services-control-1">Доставка</label>
+          <label class="services-slider-control" for="services-control-1">Доставка</label>
           <input class="services-slider-input  visually-hidden" id="services-control-2" type="radio"
             name="services-control">
           <label class="services-slider-control" for="services-control-2">Гарантия</label>
@@ -172,88 +171,88 @@
           <label class="services-slider-control" for="services-control-3">Кредит</label>
         </div>
         <div class="services-slider-item">
-          <b>Доставка</b>
-          <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо
+          <b class="service-slider-text-header">Доставка</b>
+          <p class="service-slider-text-main">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо
             заработаем, поднимая его на ваш этаж.</p>
         </div>
         <div class="services-slider-item">
-          <b>Гарантия</b>
-          <p>Если из-за возгорания купленного у нас товара у вас сгорит дом - не переживайте, мы выдадим вам
+          <b class="service-slider-text-header">Гарантия</b>
+          <p class="service-slider-text-main">Если из-за возгорания купленного у нас товара у вас сгорит дом - не переживайте, мы выдадим вам
             новый.Товар, не дом, конечно же.</p>
         </div>
         <div class="services-slider-item">
-          <b>Кредит</b>
-          <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия
+          <b class="service-slider-text-header">Кредит</b>
+          <p class="service-slider-text-main">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия
             кредита. Выгодные для нашего банка, разумеется.</p>
         </div>
       </div>
       <div class="container">
-        <p class="rare product">Доставим редкий товар под заказ</p>
+        <p class="rare-product">Доставим редкий товар под заказ</p>
         <div class="about-us-contacts">
           <div class="about-us">
-            <h2>О нас</h2>
-            <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-            <p>Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
+            <h2 class="about-us-title">О нас</h2>
+            <p class="about-us-text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+            <p class="about-us-text">Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
             <ul class="about-us-list">
               <li class="about-us-item"><span>Меловые линии</span></li>
               <li class="about-us-item"><span>СДИК</span></li>
               <li class="about-us-item"><span>ТоксБерри</span></li>
             </ul>
-            <a class="btn" href="#">Подробнее о нас</a>
+            <a class="about-us-button" href="#">Подробнее о нас</a>
           </div>
           <div class="contacts">
-            <h2>Контакты</h2>
-            <p>Вы можете забрать товар сами, заехав в наш офис.
+            <h2 class="contacts-title">Контакты</h2>
+            <p class="contacts-text">Вы можете забрать товар сами, заехав в наш офис.
               Заодно сможете проверить работоспособность покупки. </p>
-            <b>Интернет-магазин «Девайс»</b>
-            <adress>Санкт-Петербург, набережная реки Карповки, 5, литера П.<a href="tel:+78128121212">+7(812)812-12-12</a>
+            <b class="contacts-text-bold">Интернет-магазин «Девайс»</b>
+            <adress class="contacts-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.<a href="tel:+78128121212">+7(812)812-12-12</a>
             </adress>
-            <b>Время работы</b>
-            <p>пн—пт: с 10:00 до 22:00 сб—вс: с 10:00 до 19:00</p>
-            <a class="btn" href="#">Напишите нам</a>
+            <b class="contacts-text-bold">Время работы</b>
+            <p class="contacts-text">пн—пт: с 10:00 до 22:00 сб—вс: с 10:00 до 19:00</p>
+            <a class="contacts-button" href="#">Напишите нам</a>
           </div>
         </div>
       </div>
       <section class="subscribe">
         <h2 class="visually-hidden">Подписка на рассылку</h2>
-        <b>Подпишитесь на рассылку</b>
-        <p>Еженедельный дайджест с обзорами новинок, длительными тест-драйвами, распаковками, а также акции,
+        <b class="subscribe-text-bold">Подпишитесь на рассылку</b>
+        <p class="subscribe-text">Еженедельный дайджест с обзорами новинок, длительными тест-драйвами, распаковками, а также акции,
           спецпредложения и вот это вот всё.</p>
         <form class="subscribe-form" method="get" action="https://echo.htmlacademy.ru">
-          <input class="subscribe-form-input" id="subscribe" type="submit" name="subscribe" placeholder="Ваш e-mail">
-          <button class="subscribe-form-btn" type="submit">Подписаться</button>
+          <input class="subscribe-form-input" id="subscribe" type="email" name="subscribe" placeholder="Ваш e-mail">
+          <button class="subscribe-form-button" type="submit">Подписаться</button>
           <label class="navigation-form-label" for="subscribe"></label>
         </form>
-        <p>Это бесплатно</p>
+        <p class="subscribe-text">Это бесплатно</p>
       </section>
     </main>
     <footer class="page-footer">
-      <a><img src="images/logo.svg" alt="DEVICE" width="145" height="36"></a>
+      <a href="index.html"><img src="images/logo.svg" alt="DEVICE" width="145" height="36"></a>
       <div class="page-footer-info">
-        <adress>Санкт-Петербург, набережная реки Карповки, 5, литера П.</adress>
+        <adress class="page-footer-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</adress>
         <div class="page-footer-services">
           <a class="page-footer-link" href="#">Доставка</a>
           <a class="page-footer-link" href="#">Гарантия</a>
           <a class="page-footer-link" href="#">Контакты</a>
         </div>
         <div class="page-footer-phone">
-          <a class="page-footer-link" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
+          <a class="page-footer-link-phone" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
         </div>
       </div>
       <div class="page-footer-links">
         <ul class="page-footer-links-list">
           <li class="page-footer-links-item">
-            <a class="page-footer-link" href="#">
+            <a class="page-footer-social-link" href="#">
               <span class="visually-hidden">Facebook</span>
             </a>
           </li>
           <li class="page-footer-links-item">
-            <a class="page-footer-link" href="#">
+            <a class="page-footer-social-link" href="#">
               <span class="visually-hidden">Instagram</span>
             </a>
           </li>
           <li class="page-footer-links-item">
-            <a class="page-footer-link" href="#">
+            <a class="page-footer-social-link" href="#">
               <span class="visually-hidden">Twitter</span>
             </a>
           </li>
