--- a/catalog.html
+++ b/catalog.html
@@ -1,39 +1,33 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
     <meta charset="utf-8">
     <title>Страница каталога Device</title>
     <link rel="stylesheet" href="styles/styles.css">
   </head>
+
   <body>
-    <header class="page-header">
+    <header class="page-header container">
       <a><img class="logo" src="images/header/device.svg" alt="DEVICE" width="145" height="36"></a>
+      <div class="navigation-search">
+        <div class="navigation-search-input">
+          <form class="navigation-form" method="get" action="https://echo.htmlacademy.ru">
+            <input class="navigation-form-input" id="search" type="search" name="search" placeholder="Поиск по сайту">
+            <label class="navigation-form-label" for="search"></label>
+          </form>
+          <button class="navigation-form-button" type="submit"><span class="search-text">Найти</span></button>
+        </div>
+        <a class="navigation-link login" href="#">Войти</a>
+        <a class="navigation-link compare" href="#">Сравнить</a>
+        <a class="navigation-link cart" href="#">Корзина</a>
+      </div>
       <nav class="navigation">
-        <ul class="navigation-user-list">
-          <li class="navigation-user-search">
-            <form class="navigation-form" method="get" action="https://echo.htmlacademy.ru">
-              <input class="navigation-form-input" id="search" type="search" name="search" placeholder="Поиск по сайту">
-              <label class="navigation-form-label" for="search">
-                <span class="visually-hidden">Поиск:</span>
-              </label>
-              <button class="navigation-form-button" type="submit">Найти</button>
-            </form>
-          </li>
-          <li class="navigation-user-login">
-            <a class="navigation-link" href="#">Войти</a>
-          </li>
-          <li class="navigation-user-compare">
-            <a class="navigation-link" href="#">Сравнить</a>
-          </li>
-          <li class="navigation-user-cart">
-            <a class="navigation-link" href="#">Корзина</a>
-          </li>
-        </ul>
         <ul class="navigation-main-list">
           <li class="navigation-main-item">
             <a class="navigation-main-link" href="#">Каталог товаров</a>
-            <ul class="sub-menu-list">
-              <li class="sub-menu-item">
+            <ul class="sub-menu-list visually-hidden">
+              <li class="sub-menu-item ">
                 <a class="sub-menu-link" href="#">Виртуальная реальность</a>
                 <a class="sub-menu-link" href="#">Моноподы для селфи</a>
                 <a class="sub-menu-link" href="#">Экшен камеры</a>
@@ -59,7 +53,7 @@
         </ul>
       </nav>
     </header>
-    <main class="catalog-main">
+    <main class="catalog-main container">
       <header class="inner-header">
         <h1 class="inner-header-title">Моноподы для селфи</h1>
         <ul class="breadcrumbs">
@@ -74,182 +68,173 @@
           </li>
         </ul>
       </header>
-      <section class="sidebar">
-        <h2 class="sidebar-title">Фильтр:</h2>
-        <form class="filter" method="get" action="https://echo.htmlacademy.ru">
-          <fieldset class="filter-item-price">
-            <legend class="filter-title">Стоимость</legend>
-            <div class="filter-range">
-              <label class="filter-range-label  filter-range-label-min">от
-                <input class="filter-range-input" type="text" name="min-price" value="0">
-              </label>
-              <label class="filter-range-label  filter-range-label-max">до
-                <input class="filter-range-input" type="text" name="max-price" value="5000">
-              </label>
-            </div>
-          </fieldset>
-          <fieldset class="filter-item">
-            <legend class="filter-title">Цвет</legend>
-            <ul class="filter-checkbox-list">
-              <li class="filter-checkbox-item">
-                <input class="filter-checkbox-input visually-hidden" id="filter-check-1" type="checkbox" name="black"
-                  checked>
-                <label class="filter-checkbox-label" for="filter-check-1">Черный</label>
-              </li>
-              <li class="filter-checkbox-item">
-                <input class="filter-checkbox-input visually-hidden" id="filter-check-2" type="checkbox" name="white"
-                  checked>
-                <label class="filter-checkbox-label" for="filter-check-2">Белый</label>
-              </li>
-              <li class="filter-checkbox-item">
-                <input class="filter-checkbox-input visually-hidden" id="filter-check-3" type="checkbox" name="blue">
-                <label class="filter-checkbox-label" for="filter-check-3">Синий</label>
-              </li>
-              <li class="filter-checkbox-item">
-                <input class="filter-checkbox-input visually-hidden" id="filter-check-4" type="checkbox" name="red">
-                <label class="filter-checkbox-label" for="filter-check-4">Красный</label>
-              </li>
-              <li class="filter-checkbox-item">
-                <input class="filter-checkbox-input visually-hidden" id="filter-check-5" type="checkbox" name="pink">
-                <label class="filter-checkbox-label" for="filter-check-5">Розовый</label>
-              </li>
-            </ul>
-          </fieldset>
-          <fieldset class="filter-item">
-            <legend class="filter-title">Bluetooth</legend>
-            <ul class="filter-radio-list">
-              <li class="filter-radio-item">
-                <input class="filter-radio-input visually-hidden" id="filter-control-1" type="radio" name="bluetooth"
-                  value="yes" checked>
-                <label class="filter-checkbox-label" for="filter-control-1">Есть</label>
-              </li>
-              <li class="filter-radio-item">
-                <input class="filter-radio-input visually-hidden" id="filter-control-2" type="radio" name="bluetooth"
-                  value="no">
-                <label class="filter-checkbox-label" for="filter-control-2">Нет</label>
-              </li>
-            </ul>
-          </fieldset>
-          <button class="filter-button" type="submit">Показать</button>
-        </form>
-      </section>
-      <section class="goods">
-        <h2 class="visually-hidden">Наши товары</h2>
-        <section class="goods-sort">
-          <h3 class="goods-sort-title">Сортировка:</h3>
-          <select>
-            <option>Популярные</option>
-            <option>По цене</option>
-          </select>
-          <ul class="goods-sort-updown">
-            <li class="goods-sort-up">
-              <a class="goods-sort-up-link" href="#"></a>
-            </li>
-            <li class="goods-sort-down">
-              <a class="goods-sort-down-link" href="#">
-                <span></span>
-              </a>
-            </li>
-          </ul>
+      <div class="catalog-container">
+        <section class="sidebar">
+          <h2 class="sidebar-title">Фильтр:</h2>
+          <form class="filter" method="get" action="https://echo.htmlacademy.ru">
+            <fieldset class="filter-item-price">
+              <legend class="filter-title">Стоимость</legend>
+              <div class="filter-range">
+                <label class="filter-range-label  filter-range-label-min">от
+                  <input class="filter-range-input" type="text" name="min-price" value="0">
+                </label>
+                <label class="filter-range-label  filter-range-label-max">до
+                  <input class="filter-range-input" type="text" name="max-price" value="5000">
+                </label>
+              </div>
+            </fieldset>
+            <fieldset class="filter-item">
+              <legend class="filter-title">Цвет</legend>
+              <ul class="filter-checkbox-list">
+                <li class="filter-checkbox-item">
+                  <input class="filter-checkbox-input visually-hidden" id="filter-check-1" type="checkbox" name="black"
+                    checked>
+                  <label class="filter-checkbox-label" for="filter-check-1">Черный</label>
+                </li>
+                <li class="filter-checkbox-item">
+                  <input class="filter-checkbox-input visually-hidden" id="filter-check-2" type="checkbox" name="white"
+                    checked>
+                  <label class="filter-checkbox-label" for="filter-check-2">Белый</label>
+                </li>
+                <li class="filter-checkbox-item">
+                  <input class="filter-checkbox-input visually-hidden" id="filter-check-3" type="checkbox" name="blue">
+                  <label class="filter-checkbox-label" for="filter-check-3">Синий</label>
+                </li>
+                <li class="filter-checkbox-item">
+                  <input class="filter-checkbox-input visually-hidden" id="filter-check-4" type="checkbox" name="red">
+                  <label class="filter-checkbox-label" for="filter-check-4">Красный</label>
+                </li>
+                <li class="filter-checkbox-item">
+                  <input class="filter-checkbox-input visually-hidden" id="filter-check-5" type="checkbox" name="pink">
+                  <label class="filter-checkbox-label" for="filter-check-5">Розовый</label>
+                </li>
+              </ul>
+            </fieldset>
+            <fieldset class="filter-item">
+              <legend class="filter-title">Bluetooth</legend>
+              <ul class="filter-radio-list">
+                <li class="filter-radio-item">
+                  <input class="filter-radio-input visually-hidden" id="filter-control-1" type="radio" name="bluetooth"
+                    value="yes" checked>
+                  <label class="filter-checkbox-label" for="filter-control-1">Есть</label>
+                </li>
+                <li class="filter-radio-item">
+                  <input class="filter-radio-input visually-hidden" id="filter-control-2" type="radio" name="bluetooth"
+                    value="no">
+                  <label class="filter-checkbox-label" for="filter-control-2">Нет</label>
+                </li>
+              </ul>
+            </fieldset>
+            <button class="filter-button" type="submit">Показать</button>
+          </form>
         </section>
-        <section class="goods-list">
-          <article class="goods-item">
-            <img class="goods-item-img" src="images/selfy-1.jpg" alt="Любительская селфи-палка" width="360"
-              height="380">
-            <a class="goods-item-more-link" href="#">Подробнее</a>
-            <div class="goods-item-info">
-              <h2 class="goods-item-title"><a class="goods-item-link" href="#">Любительская селфи-палка</a></h2>
-              <span class="goods-item-price">500 ₽</span>
-            </div>
-          </article>
-          <article class="goods-item">
-            <img class="goods-item-img" src="images/selfy-2.jpg" alt="Профессиональная селфи-палка" width="360"
-              height="380">
-            <a class="goods-item-more-link" href="#">Подробнее</a>
-            <div class="goods-item-info">
-              <h2 class="goods-item-title"><a class="goods-item-link" href="#">Профессиональная селфи-палка</a></h2>
-              <span class="goods-item-price">1500 ₽</span>
-            </div>
-          </article>
-          <article class="goods-item">
-            <img class="goods-item-img" src="images/selfy-3.jpg" alt="Непотопляемая селфи-палка" width="360"
-              height="380">
-            <a class="goods-item-more-link" href="#">Подробнее</a>
-            <div class="goods-item-info">
-              <h2 class="goods-item-title"><a class="goods-item-link" href="#">Непотопляемая селфи-палка</a></h2>
-              <span class="goods-item-price">2500 ₽</span>
-            </div>
-          </article>
-          <article class="goods-item">
-            <img class="goods-item-img" src="images/selfy-4.jpg" alt="Селфи-палка «Следуй за мной»" width="360"
-              height="380">
-            <a class="goods-item-more-link" href="#">Подробнее</a>
-            <div class="goods-item-info">
-              <h2 class="goods-item-title"><a class="goods-item-link" href="#">Селфи-палка «Следуй за мной»</a></h2>
-              <span class="goods-item-price">1500 ₽</span>
-            </div>
-          </article>
-          <button class="button-download-more" type="button">Загрузить ещё</button>
-        </section>
-        <ul class="pagination">
-          <li>
-            <a class="pagination-control" href="#">Назад</a>
-          </li>
-          <li class="pagination-list-wrap">
-            <ul class="pagination-list">
-              <li class="pagination-item  pagination-item-active">
-                <a class="pagination-link" href="#">1</a>
+        <section class="goods">
+          <h2 class="visually-hidden">Наши товары</h2>
+          <section class="goods-sort">
+            <h3 class="goods-sort-title">Сортировка:</h3>
+            <select>
+              <option>Популярные</option>
+              <option>По цене</option>
+            </select>
+            <ul class="goods-sort-updown">
+              <li class="goods-sort-up">
+                <a class="goods-sort-up-link" href="#"></a>
               </li>
-              <li class="pagination-item">
-                <a class="pagination-link" href="#">2</a>
-              </li>
-              <li class="pagination-item">
-                <a class="pagination-link" href="#">3</a>
+              <li class="goods-sort-down">
+                <a class="goods-sort-down-link" href="#">
+                  <span></span>
+                </a>
               </li>
             </ul>
-          </li>
-          <li>
-            <a class="pagination-control" href="#">Вперед</a>
-          </li>
-        </ul>
-      </section>
+          </section>
+          <section class="goods-list">
+            <article class="goods-item">
+              <img class="goods-item-img" src="images/selfy-1.jpg" alt="Любительская селфи-палка" width="360"
+                height="380">
+              <a class="goods-item-more-link visually-hidden" href="#">Подробнее</a>
+              <div class="goods-item-info">
+                <h2 class="goods-item-title"><a class="goods-item-link" href="#">Любительская селфи-палка</a></h2>
+                <span class="goods-item-price">500 ₽</span>
+              </div>
+            </article>
+            <article class="goods-item">
+              <img class="goods-item-img" src="images/selfy-2.jpg" alt="Профессиональная селфи-палка" width="360"
+                height="380">
+              <a class="goods-item-more-link visually-hidden" href="#">Подробнее</a>
+              <div class="goods-item-info">
+                <h2 class="goods-item-title"><a class="goods-item-link" href="#">Профессиональная селфи-палка</a></h2>
+                <span class="goods-item-price">1500 ₽</span>
+              </div>
+            </article>
+            <article class="goods-item">
+              <img class="goods-item-img" src="images/selfy-3.jpg" alt="Непотопляемая селфи-палка" width="360"
+                height="380">
+              <a class="goods-item-more-link visually-hidden" href="#">Подробнее</a>
+              <div class="goods-item-info">
+                <h2 class="goods-item-title"><a class="goods-item-link" href="#">Непотопляемая селфи-палка</a></h2>
+                <span class="goods-item-price">2500 ₽</span>
+              </div>
+            </article>
+            <article class="goods-item">
+              <img class="goods-item-img" src="images/selfy-4.jpg" alt="Селфи-палка «Следуй за мной»" width="360"
+                height="380">
+              <a class="goods-item-more-link visually-hidden" href="#">Подробнее</a>
+              <div class="goods-item-info">
+                <h2 class="goods-item-title"><a class="goods-item-link" href="#">Селфи-палка «Следуй за мной»</a></h2>
+                <span class="goods-item-price">1500 ₽</span>
+              </div>
+            </article>
+            <button class="button-download-more" type="button">Загрузить ещё</button>
+            <ul class="pagination">
+              <li>
+                <a class="pagination-control" href="#">Назад</a>
+              </li>
+              <li class="pagination-list-wrap">
+                <ul class="pagination-list">
+                  <li class="pagination-item  pagination-item-active">
+                    <a class="pagination-link" href="#">1</a>
+                  </li>
+                  <li class="pagination-item">
+                    <a class="pagination-link" href="#">2</a>
+                  </li>
+                  <li class="pagination-item">
+                    <a class="pagination-link" href="#">3</a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a class="pagination-control" href="#">Вперед</a>
+              </li>
+            </ul>
+          </section>
+        </section>
       </div>
     </main>
     <footer class="page-footer">
-      <a><img src="images/logo.svg" alt="DEVICE" width="145" height="36"></a>
       <div class="page-footer-info">
+        <a class="page-footer-logo" href="index.html"><img src="images/logo.svg" alt="DEVICE" width="145"
+            height="36"></a>
         <adress class="page-footer-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</adress>
-        <div class="page-footer-services">
+      </div>
+      <div class="page-footer-services">
+        <div class="page-footer-link-block">
           <a class="page-footer-link" href="#">Доставка</a>
           <a class="page-footer-link" href="#">Гарантия</a>
           <a class="page-footer-link" href="#">Контакты</a>
         </div>
-        <div class="page-footer-phone">
-          <a class="page-footer-link-phone" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
+        <div class="page-footer-social-link-block">
+          <a class="page-footer-social-link" href="#"><span>Facebook</span></a>
+          <a class="page-footer-social-link" href="#"><span>Instagram</span></a>
+          <a class="page-footer-social-link" href="#"><span>Twitter</span></a>
         </div>
       </div>
-      <div class="page-footer-links">
-        <ul class="page-footer-links-list">
-          <li class="page-footer-links-item">
-            <a class="page-footer-social-link" href="#">
-              <span class="visually-hidden">Facebook</span>
-            </a>
-          </li>
-          <li class="page-footer-links-item">
-            <a class="page-footer-social-link" href="#">
-              <span class="visually-hidden">Instagram</span>
-            </a>
-          </li>
-          <li class="page-footer-links-item">
-            <a class="page-footer-social-link" href="#">
-              <span class="visually-hidden">Twitter</span>
-            </a>
-          </li>
-        </ul>
-        <div class="page-footer-copyright">
-          <img src="images/logo-2.svg" alt="HTML Academy" width="115" height="33">
-        </div>
+      <div class="page-footer-phone">
+        <a class="page-footer-link-phone" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
       </div>
+      <!-- <div class="page-footer-copyright">
+        <img src="images/logo-2.svg" alt="HTML Academy" width="115" height="33">
+      </div> -->
     </footer>
   </body>
+
 </html>
